--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "webpack -w",
     "build": "NODE_ENV=production webpack"
   },
-  "author": "Kosmos Developers <mail@kosmos.org> (https://kosmos.org)",
+  "author": "Kosmos Contributors <mail@kosmos.org> (https://kosmos.org)",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.18.2",
