--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack -w",
-    "build": "NODE_ENV=production webpack"
+    "build": "NODE_ENV=production webpack",
+    "prepublish": "npm run build && git add build"
   },
   "author": "Kosmos Contributors <mail@kosmos.org> (https://kosmos.org)",
   "license": "MIT",
