--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "remotestorage-module-kosmos",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "remoteStorage module for Kosmos clients",
   "main": "./dist/build.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack -w",
     "build": "NODE_ENV=production webpack",
-    "prepublish": "npm run build && git add build"
+    "prepublish": "npm run build && git add dist"
   },
   "author": "Kosmos Contributors <mail@kosmos.org> (https://kosmos.org)",
   "license": "MIT",
