--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack -w",
     "build": "NODE_ENV=production webpack",
-    "prepublish": "npm run build && git add dist"
+    "version": "npm run build && git add dist"
   },
   "author": "Kosmos Contributors <mail@kosmos.org> (https://kosmos.org)",
   "license": "MIT",
